<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/appborder"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:padding="24dp">

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/length" />

        <EditText
            android:id="@+id/edt_length"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="100"
            android:hint="@string/hundred"
            android:inputType="numberDecimal"
            android:lines="1"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/width" />

        <EditText
            android:id="@+id/edt_width"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="100"
            android:inputType="numberDecimal"
            android:hint="@string/hundred"
            android:lines="1" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/height" />

        <EditText
            android:id="@+id/edt_height"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="100"
            android:inputType="numberDecimal"
            android:hint="@string/hundred"
            android:lines="1" />

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_calculate_volume"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_calculate_circumference"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/circumference"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_calculate_surface_area"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/result"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>